# social-network/src/main/java/com/skillbox/socialnetwork/api/response/AccountResponse.java
@@ -1,14 +1,0 @@
-package com.skillbox.socialnetwork.api.response;
-
-import com.fasterxml.jackson.annotation.JsonInclude;
-import lombok.Data;
-
-import java.time.Instant;
-import java.util.Map;
-@Data
-@JsonInclude(JsonInclude.Include.NON_NULL)
-public class AccountResponse {
-    private String error;
-    private Instant timestamp;
-    private Map<String,String> data;
-}
