# social-network/src/main/java/com/skillbox/socialnetwork/api/response/SuccessResponse.java
@@ -1,0 +1,10 @@
+package com.skillbox.socialnetwork.api.response;
+
+import lombok.Data;
+import lombok.experimental.Accessors;
+
+@Data
+@Accessors(chain = true)
+public class SuccessResponse implements Dto {
+    private String message;
+}
