# social-network/src/main/java/com/skillbox/socialnetwork/controller/SupportController.java
@@ -1,8 +1,9 @@
 package com.skillbox.socialnetwork.controller;
 
 import com.skillbox.socialnetwork.api.request.SupportRequestDto;
-import com.skillbox.socialnetwork.api.response.AccountResponse;
-import com.skillbox.socialnetwork.service.PusherService;
+import com.skillbox.socialnetwork.api.response.DataResponse;
+import com.skillbox.socialnetwork.api.response.SuccessResponse;
+import com.skillbox.socialnetwork.service.SupportService;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -14,16 +15,16 @@ import org.springframework.web.bind.annotation.RestController;
 @Tag(name = "Запросы в техническую поддержку")
 public class SupportController {
 
-    private final PusherService pusherService;
+    private final SupportService supportService;
 
-    public SupportController(PusherService pusherService) {
-        this.pusherService = pusherService;
+    public SupportController(SupportService supportService) {
+        this.supportService = supportService;
     }
 
     @PostMapping("api/v1/support")
-    public AccountResponse create(@RequestBody SupportRequestDto requestDto) {
+    public DataResponse<SuccessResponse> create(@RequestBody SupportRequestDto requestDto) {
         log.info("a message has been received in support");
-        return pusherService.createAndSendMessage(requestDto);
+        return supportService.createAndSendMessage(requestDto);
     }
 
 }
